lib/src/obs/rewind_obs_bindings.g.dart

// GENERATED by ffigen from native/shim/rewind_obs.h — do not edit.
// Regenerate with `dart run ffigen` (config: ffigen.yaml).
// ignore_for_file: type=lint, doc_directive_unknown, unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
@ffi.DefaultAsset('package:rewind/rewind_obs.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int rewind_obs_init(
  ffi.Pointer<ffi.Char> out_dir,
  int seconds,
);

@ffi.Native<ffi.Int Function()>()
external int rewind_start_buffer();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> rewind_save_clip(
  ffi.Pointer<ffi.Char> out_dir,
);

@ffi.Native<ffi.Int Function()>()
external int rewind_stop_buffer();

@ffi.Native<ffi.Int Function()>()
external int rewind_capture_suspend();

@ffi.Native<ffi.Int Function()>()
external int rewind_capture_resume();

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int rewind_start_recording(
  ffi.Pointer<ffi.Char> out_dir,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> rewind_stop_recording();

@ffi.Native<ffi.Int Function()>()
external int rewind_obs_shutdown();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> rewind_last_error();

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int rewind_set_buffer_seconds(
  int seconds,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int rewind_list_displays(
  ffi.Pointer<ffi.Char> json_out,
  int json_cap,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int rewind_set_capture_display(
  ffi.Pointer<ffi.Char> display_uuid,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int rewind_list_capturable_apps(
  ffi.Pointer<ffi.Char> json_out,
  int json_cap,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int rewind_set_capture_app(
  ffi.Pointer<ffi.Char> bundle_id,
);

@ffi.Native<ffi.Int Function(ffi.Uint32)>()
external int rewind_set_capture_window(
  int window_id,
);

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int rewind_set_mic_enabled(
  int enabled,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int rewind_list_audio_inputs_json(
  ffi.Pointer<ffi.Char> json_out,
  int json_cap,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void rewind_set_mic_device(
  ffi.Pointer<ffi.Char> uid_or_null,
);

@ffi.Native<ffi.Int Function(ffi.Float)>()
external int rewind_set_mic_volume(
  double volume,
);

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int rewind_set_mic_monitoring(
  int enabled,
);

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int rewind_set_mic_leveling(
  int enabled,
);

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int rewind_set_mic_noise_suppression(
  int enabled,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int rewind_audio_levels_json(
  ffi.Pointer<ffi.Char> json_out,
  int json_cap,
);

@ffi.Native<ffi.Int Function(ffi.Int, ffi.Int)>()
external int rewind_set_capture_quality(
  int fps,
  int max_height,
);

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int rewind_set_audio_mode(
  int mode,
);

@ffi.Native<ffi.Int Function(ffi.Float)>()
external int rewind_set_game_volume(
  double volume,
);

@ffi.Native<ffi.Int Function()>()
external int rewind_preflight_screen_permission();

@ffi.Native<ffi.Int Function()>()
external int rewind_request_screen_permission();

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int rewind_perf_stats_json(
  ffi.Pointer<ffi.Char> json_out,
  int json_cap,
);

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}
